--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -43,6 +43,7 @@
       "react/prop-types": "off",
       "no-unused-expressions":"off",
       "import/prefer-default-export": "off",
+      "import/no-duplicates": "off",
       "import/extensions": [
         "error",
         "ignorePackages",
